docs/api/qiskit/0.45/qiskit.circuit.library.CUGate.mdx
---
title: CUGate
description: API reference for qiskit.circuit.library.CUGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CUGate
---

# CUGate

<Class id="qiskit.circuit.library.CUGate" github="https://github.com/qiskit/qiskit/tree/stable/0.45/qiskit/circuit/library/standard_gates/u.py" signature="qiskit.circuit.library.CUGate(theta, phi, lam, gamma, label=None, ctrl_state=None, *, duration=None, unit='dt', _base_label=None)">
  Bases: [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.controlledgate.ControlledGate")

  Controlled-U gate (4-parameter two-qubit gate).

  This is a controlled version of the U gate (generic single qubit rotation), including a possible global phase $e^{i\gamma}$ of the U gate.

  Can be applied to a [`QuantumCircuit`](qiskit.circuit.QuantumCircuit "qiskit.circuit.QuantumCircuit") with the [`cu()`](qiskit.circuit.QuantumCircuit#cu "qiskit.circuit.QuantumCircuit.cu") method.

  **Circuit symbol:**

  ```python
  q_0: ──────■──────
       ┌─────┴──────┐
  q_1: ┤ U(ϴ,φ,λ,γ) ├
       └────────────┘
  ```

  **Matrix representation:**

  $$
  \newcommand{\rotationangle}{\frac{\theta}{2}}

  CU(\theta, \phi, \lambda, \gamma)\ q_0, q_1 =
      I \otimes |0\rangle\langle 0| +
      e^{i\gamma} U(\theta,\phi,\lambda) \otimes |1\rangle\langle 1| =
      \begin{pmatrix}
          1 & 0 & 0 & 0 \\
          0 & e^{i\gamma}\cos(\rotationangle) &
          0 & -e^{i(\gamma + \lambda)}\sin(\rotationangle) \\
          0 & 0 & 1 & 0 \\
          0 & e^{i(\gamma+\phi)}\sin(\rotationangle) &
          0 & e^{i(\gamma+\phi+\lambda)}\cos(\rotationangle)
      \end{pmatrix}
  $$

  <Admonition title="Note" type="note">
    In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

    ```python
         ┌────────────┐
    q_0: ┤ U(ϴ,φ,λ,γ) ├
         └─────┬──────┘
    q_1: ──────■───────
    ```

    $$
    \newcommand{\rotationangle}{\frac{\theta}{2}}
    CU(\theta, \phi, \lambda, \gamma)\ q_1, q_0 =
    |0\rangle\langle 0| \otimes I +
    e^{i\gamma}|1\rangle\langle 1| \otimes U(\theta,\phi,\lambda) =
    \begin{pmatrix}
    1 & 0 & 0 & 0 \\
    0 & 1 & 0 & 0 \\
    0 & 0 & e^{i\gamma} \cos(\rotationangle) & -e^{i(\gamma + \lambda)}\sin(\rotationangle) \\
    0 & 0 &
    e^{i(\gamma + \phi)}\sin(\rotationangle) & e^{i(\gamma + \phi+\lambda)}\cos(\rotationangle)
    \end{pmatrix}
    $$
  </Admonition>

  Create new CU gate.

  ## Attributes

  ### base\_class

  <Attribute id="qiskit.circuit.library.CUGate.base_class" name="base_class">
    Get the base class of this instruction. This is guaranteed to be in the inheritance tree of `self`.

    The “base class” of an instruction is the lowest class in its inheritance tree that the object should be considered entirely compatible with for \_all\_ circuit applications. This typically means that the subclass is defined purely to offer some sort of programmer convenience over the base class, and the base class is the “true” class for a behavioural perspective. In particular, you should *not* override [`base_class`](#qiskit.circuit.library.CUGate.base_class "qiskit.circuit.library.CUGate.base_class") if you are defining a custom version of an instruction that will be implemented differently by hardware, such as an alternative measurement strategy, or a version of a parametrised gate with a particular set of parameters for the purposes of distinguishing it in a [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") from the full parametrised gate.

    This is often exactly equivalent to `type(obj)`, except in the case of singleton instances of standard-library instructions. These singleton instances are special subclasses of their base class, and this property will return that base. For example:

    ```python
    >>> isinstance(XGate(), XGate)
    True
    >>> type(XGate()) is XGate
    False
    >>> XGate().base_class is XGate
    True
    ```

    In general, you should not rely on the precise class of an instruction; within a given circuit, it is expected that `Instruction.name` should be a more suitable discriminator in most situations.
  </Attribute>

  ### condition

  <Attribute id="qiskit.circuit.library.CUGate.condition" name="condition">
    The classical condition on the instruction.
  </Attribute>

  ### condition\_bits

  <Attribute id="qiskit.circuit.library.CUGate.condition_bits" name="condition_bits">
    Get Clbits in condition.
  </Attribute>

  ### ctrl\_state

  <Attribute id="qiskit.circuit.library.CUGate.ctrl_state" name="ctrl_state">
    Return the control state of the gate as a decimal integer.
  </Attribute>

  ### decompositions

  <Attribute id="qiskit.circuit.library.CUGate.decompositions" name="decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  ### definition

  <Attribute id="qiskit.circuit.library.CUGate.definition" name="definition">
    Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.
  </Attribute>

  ### duration

  <Attribute id="qiskit.circuit.library.CUGate.duration" name="duration">
    Get the duration.
  </Attribute>

  ### label

  <Attribute id="qiskit.circuit.library.CUGate.label" name="label">
    Return instruction label
  </Attribute>

  ### mutable

  <Attribute id="qiskit.circuit.library.CUGate.mutable" name="mutable">
    Is this instance is a mutable unique instance or not.

    If this attribute is `False` the gate instance is a shared singleton and is not mutable.
  </Attribute>

  ### name

  <Attribute id="qiskit.circuit.library.CUGate.name" name="name">
    Get name of gate. If the gate has open controls the gate name will become:

    > \<original\_name\_o\<ctrl\_state>

    where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.
  </Attribute>

  ### num\_clbits

  <Attribute id="qiskit.circuit.library.CUGate.num_clbits" name="num_clbits">
    Return the number of clbits.
  </Attribute>

  ### num\_ctrl\_qubits

  <Attribute id="qiskit.circuit.library.CUGate.num_ctrl_qubits" name="num_ctrl_qubits">
    Get number of control qubits.

    **Returns**

    The number of control qubits for the gate.

    **Return type**

    [int](https://docs.python.org/3/library/functions.html#int "(in Python v3.12)")
  </Attribute>

  ### num\_qubits

  <Attribute id="qiskit.circuit.library.CUGate.num_qubits" name="num_qubits">
    Return the number of qubits.
  </Attribute>

  ### params

  <Attribute id="qiskit.circuit.library.CUGate.params" name="params" />

  ### unit

  <Attribute id="qiskit.circuit.library.CUGate.unit" name="unit">
    Get the time unit of duration.
  </Attribute>

  ## Methods

  ### inverse

  <Function id="qiskit.circuit.library.CUGate.inverse" name="inverse" signature="inverse()">
    Return inverted CU gate.

    $CU(\theta,\phi,\lambda,\gamma)^{\dagger} = CU(-\theta,-\phi,-\lambda,-\gamma)$)
  </Function>
</Class>

